--- a/index.html
+++ b/index.html
@@ -3,13 +3,47 @@
   <head>
    <link rel="stylesheet" href="application.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>Mr.Coffee</title>
   </head>
   <body>
-    <nav></nav>
+    <header>
+       <nav>
+            <ul>
+                <li><img class="nav-logo" src="assets\Assets\full_logo_white.png" alt="White-logo"></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="about.html">Qui sommes-nous?</a></li>
+                <li><a href="contact.html">Nous contacter</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <div>
+        <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
+    </div>
+
+    <div>
+        <img class="mr-c-salle" src="assets\Assets\mr_coffee_salle.jpg" alt="Mr-Coffee-salle">
+    </div>
 
 
 
-    <footer></footer>
+
+
+
+<!--
+    <footer class="footer">
+        <div class="container-footer">
+            <div class="logo">
+                <a href="#"><img src="assets\Assets\logo_blanc.png" alt="logo-clear"></a>
+            </div>
+            <div class="footer-center">
+                <h5 class="footer-text">Suivez nous sur les réseaux sociaux!</h5>
+                <a href="#"><img src="assets\Assets\logo_linkedin.png" alt="logo-linkedin"></a>
+                <a href="#"><img src="Assets/logo_twitter.png" alt="logo-twitter"></a>
+                <a href="#"><img src="Assets/logo_facebook.png" alt="logo-facebook"></a>
+            </div>
+        </div>
+    </footer>
+   --> 
   </body>
 </html>
