Three things header

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
         <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
     </div>
 
-    <div>
-        <img class="mr-c-salle" src="assets\Assets\mr_coffee_salle.jpg" alt="Mr-Coffee-salle">
+    <div class="image-wrapper">
+        <img src="assets\Assets\mr_coffee_salle.jpg" alt="Mr-Coffee-salle">
+        <div class="text">
+            <h2>DÉCOUVREZ NOTRE CAFÉ PHILO</h2>
+        </div>
+    </div>
+
+    <div class="three-things">
+        <p>Chez Mr.Coffee, <br>
+        nous aimons trois choses</p>
     </div>
 
 
@@ -30,20 +38,6 @@
 
 
 
-<!--
-    <footer class="footer">
-        <div class="container-footer">
-            <div class="logo">
-                <a href="#"><img src="assets\Assets\logo_blanc.png" alt="logo-clear"></a>
-            </div>
-            <div class="footer-center">
-                <h5 class="footer-text">Suivez nous sur les réseaux sociaux!</h5>
-                <a href="#"><img src="assets\Assets\logo_linkedin.png" alt="logo-linkedin"></a>
-                <a href="#"><img src="Assets/logo_twitter.png" alt="logo-twitter"></a>
-                <a href="#"><img src="Assets/logo_facebook.png" alt="logo-facebook"></a>
-            </div>
-        </div>
-    </footer>
-   --> 
+
   </body>
 </html>
