trying to use flex for the cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,29 @@
         nous aimons trois choses</p>
     </div>
 
+    <div class="box-container">
+        <div class="left">Nos priorités : la qualité et le goût. 
+            Tous nos cafés sont soigneusements 
+            séléctionnés en accord avec nos 
+            valeurs de respect de la nature et des 
+            hommes</div>
+        <div class="center">Nous sommes de ceux qui pensent 
+            qu’ensemble, nous allons plus loin.
+            C’est pourquoi chez Mr.Coffee, notre 
+            mission est de rassembler les gens en 
+            leur offrant un lieu de liberté et de 
+            partages</div>
+        <div class="right">Chez Mr.Coffee, que vous soyez 
+            poête, fantasque ou philosophe, nous 
+            vous offrons un lieu pour parler de 
+            vos histoires, ou pour les écrire.</div>
 
+    </div>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+     Ipsam, quo officiis nihil corporis tempore rerum temporibus <br>
+     fuga porro earum sequi nemo adipisci recusandae. Recusandae, <br>
+     quis esse aut perferendis minima iste?</p>
 
 
 
