--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
    <link rel="stylesheet" href="application.css">
-    <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1"> 
+   <meta charset="utf-8">
     <title>Mr.Coffee</title>
   </head>
   <body>
@@ -34,7 +35,9 @@
     </div>
 
     <div class="box-container">
-        <div class="left">Nos priorités : la qualité et le goût. 
+        <div class="left"> 
+            <img class="icon-cafe" src="assets\Assets\icon_café.png" alt="icon-cafe"> 
+            priorités : la qualité et le goût. 
             Tous nos cafés sont soigneusements 
             séléctionnés en accord avec nos 
             valeurs de respect de la nature et des 
@@ -60,6 +63,14 @@
 
 
 
-
+    <footer class="foot-contain">
+        <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
+        <ul class="my-list">
+            <lh><p class="follow-us">Suivez nous sur les réseaux sociaux!<p></lh>
+            <li class="list-items"><img class="social-logo" src="assets\Assets\logo_linkedin.png" alt="linkedin"></li>
+            <li class="list-items"><img class="social-logo" src="assets\Assets\logo_twitter.png" alt="twitter"></li>
+            <li class="list-items"><img class="social-logo" src="assets\Assets\logo_facebook.png" alt="facebook"></li>
+        </ul>
+    </footer>
   </body>
 </html>
