--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
    <link rel="stylesheet" href="application.css">
-    <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1"> 
+   <meta charset="utf-8">
     <title></title>
   </head>
   <body>
