--- a/index.html
+++ b/index.html
@@ -37,28 +37,35 @@
     <div class="box-container">
         <div class="left"> 
             <img class="icon-cafe" src="assets\Assets\icon_café.png" alt="icon-cafe"> 
-            priorités : la qualité et le goût. 
-            Tous nos cafés sont soigneusements 
-            séléctionnés en accord avec nos 
-            valeurs de respect de la nature et des 
-            hommes</div>
-        <div class="center">Nous sommes de ceux qui pensent 
-            qu’ensemble, nous allons plus loin.
-            C’est pourquoi chez Mr.Coffee, notre 
-            mission est de rassembler les gens en 
-            leur offrant un lieu de liberté et de 
-            partages</div>
-        <div class="right">Chez Mr.Coffee, que vous soyez 
-            poête, fantasque ou philosophe, nous 
-            vous offrons un lieu pour parler de 
-            vos histoires, ou pour les écrire.</div>
+            <h4 class="card-text-heading">Le bon café</h4>
+              <p class="card-text">priorités : la qualité et le goût. 
+                Tous nos cafés sont soigneusements 
+                séléctionnés en accord avec nos 
+                valeurs de respect de la nature et des 
+                hommes</p>
+        </div>
+        <div class="center">
+            <img class="icon-hands" src="assets\Assets\icon_gens.png" alt="icon-hands">
+            <h4 class="card-text-heading">Les gens</h4>
+               <p class="card-text">Nous sommes de ceux qui pensent 
+                qu’ensemble, nous allons plus loin.
+                C’est pourquoi chez Mr.Coffee, notre 
+                mission est de rassembler les gens en 
+                leur offrant un lieu de liberté et de 
+                partages</p>
+        </div>
+        <div class="right">
+            <img class="icon-book" src="assets\Assets\icon_histoires.png" alt="icon-book">
+            <h4 class="card-text-heading">Les histoires</h4>
+               <p class="card-text">Chez Mr.Coffee, que vous soyez 
+                poête, fantasque ou philosophe, nous 
+                vous offrons un lieu pour parler de 
+                vos histoires, ou pour les écrire.</p>
+        </div>
 
     </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-     Ipsam, quo officiis nihil corporis tempore rerum temporibus <br>
-     fuga porro earum sequi nemo adipisci recusandae. Recusandae, <br>
-     quis esse aut perferendis minima iste?</p>
+
 
 
 
