--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="left"> 
             <img class="icon-cafe" src="assets\Assets\icon_café.png" alt="icon-cafe"> 
             <h4 class="card-text-heading">Le bon café</h4>
-              <p class="card-text">priorités : la qualité et le goût. 
+              <p class="card-text">Nos priorités : la qualité et le goût. 
                 Tous nos cafés sont soigneusements 
                 séléctionnés en accord avec nos 
                 valeurs de respect de la nature et des 
@@ -65,6 +65,11 @@
 
     </div>
 
+    <div class="button-container">
+        <button class="big-button">
+            En savoir plus
+        </button>
+    </div>
 
 
 
