pottery & philosophy fixed

--- a/index.html
+++ b/index.html
@@ -71,6 +71,38 @@
         </button>
     </div>
 
+    <div class="discover-us">
+        <p>Découvrez notre progamme</p>
+    </div>
+
+    <div class="days-7">
+        <img class="day-logo-7" src="assets\Assets\icon_open.png" alt="icon-open">
+        <p class="day-7-text-bold">Votre café vous accueille 7j/7: </p>
+    </div>
+
+    <div class="activities">
+        <div class="pottery">
+           <p><span class="day-7-text-normal">Tous les mardis,<br>
+                retrouvez</span> <span class="activities-text-bold">les cafés poésies :</span>
+                <br><br><br>
+                <span class="activities-text-bold">
+                Venez écouter ou lire vos plus beaux 
+                poèmes : Mr.Coffee offre une 
+                consommation à tous les courageux!</span>
+        </p>
+    </div>
+        <div class="philosophy">
+            <p><span class="day-7-text-normal">Tous les jeudis,<br>
+                retrouvez</span> <span class="activities-text-bold">les cafés philo et débat :</span>
+                <br><br><br>
+                <span class="activities-text-bold">
+                Autour d’un thème philosophique ou de 
+                société, venez débattre entre experts ou 
+                simple curieux.</span>
+            </p>
+        </div>
+    </div>
+
 
 
 
