about (flex image with text)

--- a/about.html
+++ b/about.html
@@ -4,13 +4,59 @@
    <link rel="stylesheet" href="application.css">
    <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <meta charset="utf-8">
-    <title></title>
+    <title>About</title>
   </head>
   <body>
-    <nav></nav>
+    <header>
+      <nav>
+           <ul>
+               <li><img class="nav-logo" src="assets\Assets\full_logo_white.png" alt="White-logo"></li>
+               <li><a href="#">Accueil</a></li>
+               <li><a href="about.html">Qui sommes-nous?</a></li>
+               <li><a href="contact.html">Nous contacter</a></li>
+           </ul>
+       </nav>
+   </header>
+
+   <div>
+    <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
+  </div>
+
+  <section class="chez-coffee-container">
+    <div class="chez-text">
+      <h2>Chez Mr.Coffee, notre <br>
+        engagement commence dans <br>
+        le café.</h2>
+        <br>
+          <p>On ne pouvait pas offrir un espace de liberté d’expression <br>
+            et de partage sans penser à ce que l’on sert dans nos <br>
+            tasses..</p>
+            <br>
+          <p>Tout nos cafés viennent d’exploitations équitables : les <br>
+            agriculteurs bénéficient d’une rémunération juste pour leur <br>
+            labeur, les conditions de travail respectent les droits de <br>
+            l’Homme.</p>
+            <br>
+          <p>C’est ce qui rend nos cafés si bons : ils poussent, sont <br>
+            cultivés, cueillis, et séchés dans le respect et l’amour.</p>
+      </div>
+    <div>
+      <img class="chez-image" src="assets\Assets\trois_cafés.jpg" alt="coffee-makers">
+    </div>
+  </section>
 
 
 
-    <footer></footer>
-</body>
+<!--
+    <footer class="foot-contain">
+      <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
+      <ul class="my-list">
+          <lh><p class="follow-us">Suivez nous sur les réseaux sociaux!<p></lh>
+          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_linkedin.png" alt="linkedin"></li>
+          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_twitter.png" alt="twitter"></li>
+          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_facebook.png" alt="facebook"></li>
+      </ul>
+    </footer>
+-->
+  </body>
 </html>
