--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,36 @@
    <link rel="stylesheet" href="application.css">
    <meta name="viewport" content="width=device-width, initial-scale=1"> 
    <meta charset="utf-8">
-    <title></title>
+    <title>Contact</title>
   </head>
   <body>
-    <nav></nav>
+    <header>
+      <nav>
+           <ul>
+               <li><img class="nav-logo" src="assets\Assets\full_logo_white.png" alt="White-logo"></li>
+               <li><a href="#">Accueil</a></li>
+               <li><a href="about.html">Qui sommes-nous?</a></li>
+               <li><a href="contact.html">Nous contacter</a></li>
+           </ul>
+       </nav>
+   </header>
+
+   <div>
+    <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
+  </div>
 
 
 
-    <footer></footer>
+<!--
+    <footer class="foot-contain">
+      <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
+      <ul class="my-list">
+          <lh><p class="follow-us">Suivez nous sur les réseaux sociaux!<p></lh>
+          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_linkedin.png" alt="linkedin"></li>
+          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_twitter.png" alt="twitter"></li>
+          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_facebook.png" alt="facebook"></li>
+      </ul>
+    </footer>
+-->
   </body>
 </html>
