--- a/index.html
+++ b/index.html
@@ -103,9 +103,14 @@
         </div>
     </div>
 
+    <div>
+        <p class="workshop-text">Sans oublier nos ateliers d’écritures et évènements excéptionnels !</p>
+    </div>
 
-
-
+    <div>
+        <p class="information-text">Rendez-vous sur notre page Contact pour retrouver <br>
+            toutes les infos pratiques</p>
+    </div>
 
     <footer class="foot-contain">
         <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
