basic finish without media queries

--- a/contact.html
+++ b/contact.html
@@ -10,30 +10,48 @@
     <header>
       <nav>
            <ul>
-               <li><img class="nav-logo" src="assets\Assets\full_logo_white.png" alt="White-logo"></li>
-               <li><a href="#">Accueil</a></li>
+               <li><img class="nav-logo" src="assets/Assets/full_logo_white.png" alt="White-logo"></li>
+               <li><a href="index.html">Accueil</a></li>
                <li><a href="about.html">Qui sommes-nous?</a></li>
-               <li><a href="contact.html">Nous contacter</a></li>
+               <li><a href="#">Nous contacter</a></li>
            </ul>
        </nav>
    </header>
 
    <div>
-    <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
+    <img class="logo-mr-c" src="assets/Assets/logo_mrcoffee.png" alt="logo-mr-c">
   </div>
 
+  <section>
+    <div class="waiting">
+        <p>On vous attend !</p>
+    </div>
 
+    <div class="location-text">
+      <p>
+      <b>Mr.Coffee</b><br>
+        15 place Jules Guesde <br>
+        75006 Paris be <br>
+        <br>
+        Tel : +33 9 46 25 78 45 <br>
+        Mail : contact@mr-coffee.com <br>
+      </p>
+    </div>
 
-<!--
-    <footer class="foot-contain">
-      <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
-      <ul class="my-list">
-          <lh><p class="follow-us">Suivez nous sur les réseaux sociaux!<p></lh>
-          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_linkedin.png" alt="linkedin"></li>
-          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_twitter.png" alt="twitter"></li>
-          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_facebook.png" alt="facebook"></li>
-      </ul>
-    </footer>
--->
+    <picture class="location-img">
+     <img class="location-width" src="C:/Users/Tyrone/OneDrive/Desktop/carte_contact.png" alt="Cafe-location"> 
+    </picture>
+  </section>
+
+  <footer class="foot-contain">
+    <div ><img class="foot-logo" src="assets/Assets/logo_blanc.png" alt="Footer-logo"></div>
+      <p class="follow-us">Suivez nous sur les réseaux sociaux!</p>    
+        <ul class="my-list">
+            <li class="list-items"><img class="social-logo" src="assets/Assets/logo_linkedin.png" alt="linkedin"></li>
+            <li class="list-items"><img class="social-logo" src="assets/Assets/logo_twitter.png" alt="twitter"></li>
+            <li class="list-items"><img class="social-logo" src="assets/Assets/logo_facebook.png" alt="facebook"></li>
+        </ul>
+  </footer>
+
   </body>
 </html>
