--- a/about.html
+++ b/about.html
@@ -10,16 +10,16 @@
     <header>
       <nav>
            <ul>
-               <li><img class="nav-logo" src="assets\Assets\full_logo_white.png" alt="White-logo"></li>
-               <li><a href="#">Accueil</a></li>
-               <li><a href="about.html">Qui sommes-nous?</a></li>
+               <li><img class="nav-logo" src="assets/Assets/full_logo_white.png" alt="White-logo"></li>
+               <li><a href="index.html">Accueil</a></li>
+               <li><a href="#">Qui sommes-nous?</a></li>
                <li><a href="contact.html">Nous contacter</a></li>
            </ul>
        </nav>
    </header>
 
    <div>
-    <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
+    <img class="logo-mr-c" src="assets/Assets/logo_mrcoffee.png" alt="logo-mr-c">
   </div>
 
   <section class="chez-coffee-container">
@@ -41,22 +41,42 @@
             cultivés, cueillis, et séchés dans le respect et l’amour.</p>
       </div>
     <div>
-      <img class="chez-image" src="assets\Assets\trois_cafés.jpg" alt="coffee-makers">
+      <img class="chez-img" src="assets/Assets/trois_cafés.jpg" alt="coffee-makers">
     </div>
   </section>
 
+  <div class="almost-coffee-container">
+    <div>
+      <img class="almost-img" src="assets/Assets/mrcoffee_salle2.jpg" alt="Coffee-shop">
+    </div>
+    <div class="almost-text">
+      <h2>Mr.Coffee, un café (presque) <br> 
+      comme les autres.</h2>
+       <p>Ici, on vient pour retrouver quelqu’un, ou se retrouver avec <br> 
+        soi, pour travailler sur son ordinateur ou se détendre, pour <br>
+        lire parmis les ouvrages de notre bibliothèque ou <br>
+        simplement apprécier un bon café. </p>
+        <br>
+       <p>Tout ce monde si différent qui se croise sans se voir, ça nous <br>
+        a donné envie de faire quelque chose en plus. </p> 
+        <br>
+      <p>C’est comme cela que Mr.Coffee, le philosophe, est né.</p> 
+        <br>
+      <p>Notre ambition : réunir des gens de tous les horizons <br>
+        autour de sujets de société, de débats philosophiques, de <br>
+        leur passion commune pour l’écriture et les lettres</p>
+    </div>
+  </div>
 
-
-<!--
     <footer class="foot-contain">
-      <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
-      <ul class="my-list">
-          <lh><p class="follow-us">Suivez nous sur les réseaux sociaux!<p></lh>
-          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_linkedin.png" alt="linkedin"></li>
-          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_twitter.png" alt="twitter"></li>
-          <li class="list-items"><img class="social-logo" src="assets\Assets\logo_facebook.png" alt="facebook"></li>
-      </ul>
+      <div ><img class="foot-logo" src="assets/Assets/logo_blanc.png" alt="Footer-logo"></div>
+        <p class="follow-us">Suivez nous sur les réseaux sociaux!</p>    
+          <ul class="my-list">
+              <li class="list-items"><img class="social-logo" src="assets/Assets/logo_linkedin.png" alt="linkedin"></li>
+              <li class="list-items"><img class="social-logo" src="assets/Assets/logo_twitter.png" alt="twitter"></li>
+              <li class="list-items"><img class="social-logo" src="assets/Assets/logo_facebook.png" alt="facebook"></li>
+          </ul>
     </footer>
--->
+
   </body>
 </html>
