--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
        <nav>
             <ul>
-                <li><img class="nav-logo" src="assets\Assets\full_logo_white.png" alt="White-logo"></li>
+                <li><img class="nav-logo" src="assets/Assets/full_logo_white.png" alt="White-logo"></li>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="about.html">Qui sommes-nous?</a></li>
                 <li><a href="contact.html">Nous contacter</a></li>
@@ -19,11 +19,11 @@
     </header>
     
     <div>
-        <img class="logo-mr-c" src="assets\Assets\logo_mrcoffee.png" alt="logo-mr-c">
+        <img class="logo-mr-c" src="assets/Assets/logo_mrcoffee.png" alt="logo-mr-c">
     </div>
 
     <div class="image-wrapper">
-        <img src="assets\Assets\mr_coffee_salle.jpg" alt="Mr-Coffee-salle">
+        <img src="assets/Assets/mr_coffee_salle.jpg" alt="Mr-Coffee-salle">
         <div class="text">
             <h2>DÉCOUVREZ NOTRE CAFÉ PHILO</h2>
         </div>
@@ -36,7 +36,7 @@
 
     <div class="box-container">
         <div class="left"> 
-            <img class="icon-cafe" src="assets\Assets\icon_café.png" alt="icon-cafe"> 
+            <img class="icon-cafe" src="assets/Assets/icon_café.png" alt="icon-cafe"> 
             <h4 class="card-text-heading">Le bon café</h4>
               <p class="card-text">Nos priorités : la qualité et le goût. 
                 Tous nos cafés sont soigneusements 
@@ -45,7 +45,7 @@
                 hommes</p>
         </div>
         <div class="center">
-            <img class="icon-hands" src="assets\Assets\icon_gens.png" alt="icon-hands">
+            <img class="icon-hands" src="assets/Assets/icon_gens.png" alt="icon-hands">
             <h4 class="card-text-heading">Les gens</h4>
                <p class="card-text">Nous sommes de ceux qui pensent 
                 qu’ensemble, nous allons plus loin.
@@ -55,7 +55,7 @@
                 partages</p>
         </div>
         <div class="right">
-            <img class="icon-book" src="assets\Assets\icon_histoires.png" alt="icon-book">
+            <img class="icon-book" src="assets/Assets/icon_histoires.png" alt="icon-book">
             <h4 class="card-text-heading">Les histoires</h4>
                <p class="card-text">Chez Mr.Coffee, que vous soyez 
                 poête, fantasque ou philosophe, nous 
@@ -76,7 +76,7 @@
     </div>
 
     <div class="days-7">
-        <img class="day-logo-7" src="assets\Assets\icon_open.png" alt="icon-open">
+        <img class="day-logo-7" src="assets/Assets/icon_open.png" alt="icon-open">
         <p class="day-7-text-bold">Votre café vous accueille 7j/7: </p>
     </div>
 
@@ -113,13 +113,13 @@
     </div>
 
     <footer class="foot-contain">
-        <div ><img class="foot-logo" src="assets\Assets\logo_blanc.png" alt="Footer-logo"></div>
-        <ul class="my-list">
-            <lh><p class="follow-us">Suivez nous sur les réseaux sociaux!<p></lh>
-            <li class="list-items"><img class="social-logo" src="assets\Assets\logo_linkedin.png" alt="linkedin"></li>
-            <li class="list-items"><img class="social-logo" src="assets\Assets\logo_twitter.png" alt="twitter"></li>
-            <li class="list-items"><img class="social-logo" src="assets\Assets\logo_facebook.png" alt="facebook"></li>
-        </ul>
+        <div ><img class="foot-logo" src="assets/Assets/logo_blanc.png" alt="Footer-logo"></div>
+            <p class="follow-us">Suivez nous sur les réseaux sociaux!</p>
+                <ul class="my-list">
+                    <li class="list-items"><img class="social-logo" src="assets/Assets/logo_linkedin.png" alt="linkedin"></li>
+                    <li class="list-items"><img class="social-logo" src="assets/Assets/logo_twitter.png" alt="twitter"></li>
+                    <li class="list-items"><img class="social-logo" src="assets/Assets/logo_facebook.png" alt="facebook"></li>
+                </ul>
     </footer>
   </body>
 </html>
