Project 2-Form html & CSS complete

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,33 @@
     <img class="logo-mr-c" src="assets/Assets/logo_mrcoffee.png" alt="logo-mr-c">
   </div>
 
+  <div class="waiting">
+    <p>Tell us everything!</p>
+  </div>
+
+  <div class="form">
+    <form action="" >
+      <label for="sname">Surname *</label><br>
+      <input type="text" id="sname" name="sname"><br>
+
+      <label for="fname">First name *</label><br>
+      <input type="text" id="fname" name="fname"><br>
+
+      <label for="number">Phone number:</label><br>
+      <input type="number" id="number" name="number"><br>
+
+      <label for="eaddress">Email address *</label><br>
+      <input type="text" id="eaddress" name="eaddress"><br>
+
+      <label for="message">Message *</label><br>
+      <textarea name="message" id="message" cols="150" rows="10" placeholder="Your message goes here"></textarea><br>
+
+      <input id="submit" type="submit" value="Submit">
+    </form>
+  </div>
+  
+ 
+
   <section>
     <div class="waiting">
         <p>On vous attend !</p>
