--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script defer src="form.js"></script>
    <link rel="stylesheet" href="application.css">
    <link rel="icon" href="C:/Users/Tyrone/OneDrive/Desktop/coffee.png">
    <meta name="viewport" content="width=device-width, initial-scale=1"> 
@@ -27,9 +28,10 @@
   <div class="waiting">
     <p>Tell us everything!</p>
   </div>
-
-  <div class="form">
-    <form action="" >
+  
+  <br>
+  <div class="form-style">
+    <form id="form">
       <label for="sname">Surname *</label><br>
       <input type="text" id="sname" name="sname"><br>
 
@@ -39,17 +41,36 @@
       <label for="number">Phone number:</label><br>
       <input type="number" id="number" name="number"><br>
 
-      <label for="eaddress">Email address *</label><br>
-      <input type="text" id="eaddress" name="eaddress"><br>
+      <label for="email">Email address *</label><br>
+      <input type="email" id="email" name="email"><br>
 
       <label for="message">Message *</label><br>
       <textarea name="message" id="message" cols="150" rows="10" placeholder="Your message goes here"></textarea><br>
-
-      <input id="submit" type="submit" value="Submit">
+      <div id="formError"></div>
+      <br>
+      <button id="send" type="submit" value="Send">Send</button>
     </form>
   </div>
-  
- 
+
+  <div id="modalContainer" class="modal-container">
+    <div class="modal">
+      <img src="assets/Assets/logo_dark.png" alt="logo-dark">
+        <h2>THANK YOU <br><br>
+          Your message has been sent!
+        </h2>
+        <br>
+
+        <div class="answer">
+          <p><b> 
+            We will try to answer them as quickly as possible. <br> See you at Mr. Coffee soon! 
+          </b></p>
+          <br>
+          <button type="submit" class="my-button" id="close">Close</button>
+      </div>
+    </div>
+  </div>
+
+
 
   <section>
     <div class="waiting">
